--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     background-color: #f5f5f5;
 }
 
+img {
+    width: 100%;
+}
+
 P {
     color: #333;
     line-height: 1.5;
@@ -97,6 +101,62 @@ header {
     text-decoration: none;
 }
 
+/* layout */
+.container-flex {
+    display: flex;
+    max-width: 1900px;
+    flex-direction: column;
+    margin: 0 auto;
+    background-color: #fff;
+}
+
+main {
+    padding: 10px;
+
+}
+
+.post-content {
+    padding: 10px;
+}
+
+.post-info {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: grey;
+
+}
+
+.post-author {
+    margin: 10px;
+}
+
+.post-content h1 {
+    font-size: 2.8rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #14213d;
+}
+
+aside {
+    padding: 10px;
+
+}
+
+.about-me {
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.about-me img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0px auto;
+
+}
+
 /* mobile first responsive design  */
 @media (min-width:675px) {
     nav {
@@ -115,4 +175,15 @@ header {
         padding: 10px;
     }
 
+    .container-flex {
+        flex-direction: row;
+    }
+
+    main {
+        width: 70%;
+    }
+
+    aside {
+        width: 30%;
+    }
 }
